# cysqld

./: .gitignore  README.md  pyproject.toml
cysqld/: core.pyi  core.pyx
