[project]
name = "cysqld"
version = "0.0.8b"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "cython>=3.1.2",
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "snakeviz>=2.2.2",
]

[build-system]
requires = ["cython", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cysqld"]
ext-modules = [
    {name = "cysqld.core", sources = ["cysqld/core.pyx"], language = "c++"},
]
